@@ -1,3 +1,10 @@
+3/17/2013 - version 1.1.3:
+   - Fixing bug from abicky's bugfix - search now works properly w/ max_id
+3/16/2013 - version 1.1.2:
+   - Bug fixes from abicky, remove a browser in statuses.R
+3/3/2013 - version 1.1.1:
+   - Added 'longitude' and 'latitude' fields to the status class,
+     pulls from the 'coordinates' field of a tweet (when available)
 3/1/2013 - version 1.1.0:
    - Release
 2/23/2013 - version 0.99.28:
